# avast_android_decompiled

./: README.md  explain_rule.py  pyproject.toml  rule_decompiler.py  scanner.py
avast_py_simulate/: __init__.py  db_loader.py  engine.py  kb10_pseudo.py  models.py  rule_decompiler.py  rule_explainer.py  simulate.py  yara_like.py
